# hybrid-nl2sql

./: .env.example  .env.local-services.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: agent.py  backup.py  connectors.py  llm.py  metadata.py  spark.py  sql_guardrails.py
backend/app/static/: example_catalog.json
backend/hybrid_nl2sql_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: architecture.md  local-metadata-lab.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
infra/local-services/mysql/: init.sql
infra/local-services/postgres/: init.sql
scripts/: bootstrap_local_polaris.py  exercise_sources_endpoint.py  podman-local-services-down.sh  podman-local-services-up.sh  run-local-metadata-exercise.sh  seed-local-polaris.sh  seed_local_polaris_catalog.py  start-backend.sh  start-frontend.sh
